--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 server.port=8080
+
+#----------------------
+# Thread Properties
+#-----------------------
+getJiraInfoExecutor.thread.CorePoolSize = ${getJiraInfoExecutor_thread_CorePoolSize:30}
+getJiraInfoExecutor.thread.MaxPoolSize = ${getJiraInfoExecutor_thread_MaxPoolSize:30}
+getJiraInfoExecutor.thread.QueueCapacity = ${getJiraInfoExecutor_thread_QueueCapacity:1000}
