--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
+    implementation('org.thymeleaf:thymeleaf:3.0.12.RELEASE')
+    implementation 'org.thymeleaf:thymeleaf-spring5:3.1.2.RELEASE'
 }
 
 tasks.named('test') {
