--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,32 @@
+# OpenAI API Key
+openai.api.key=
 
+# OpenAI Model
+openai.model=gpt-3.5-turbo
+
+# OpenAI URL
+openai.api.url=https://api.openai.com/v1/chat/completions
+
+# Temperature parameter
+openai.temperature=0.7
+
+# Max tokens parameter
+openai.max-tokens=100
+
+# Top P parameter
+openai.top-p=0.8
+
+# Frequency penalty parameter
+openai.frequency-penalty=0.8
+
+# Presence penalty parameter
+openai.presence-penalty=0.8
+
+# Stop tokens (comma-separated list)
+#openai.stop=stopword1,stopword2
+
+# Number of completions parameter
+openai.n=1
+
+# Log level parameter
+openai.log-level=info
