--- a/build.gradle
+++ b/build.gradle
@@ -29,8 +29,7 @@ dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
-    implementation('org.thymeleaf:thymeleaf:3.0.12.RELEASE')
-    implementation 'org.thymeleaf:thymeleaf-spring5:3.1.2.RELEASE'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 }
 
 tasks.named('test') {
