successfully reaching jira and openai, just need to fix handling of response back to display on front end

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
 # OpenAI API Key
-openai.api.key=
+openai.api.key=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
 
 # OpenAI Model
 openai.model=gpt-3.5-turbo
@@ -37,3 +37,10 @@ openai.n=1
 
 # Log level parameter
 openai.log-level=info
+
+#application url
+openai.start.changerequest.url=http://localhost:8080/changeRequest
+
+jira.username=lindahl.isaac@gmail.com
+
+jira.authkey=ATATT3xFfGF0il6Qn4ue5DzI0o77-VFjRpSOtSALN_zukIJT5VKBflahEyZ5dOqBv7PvG9hBpQj1VZc--wftTuEzAk4zPwwY86uigkOEEu4zPNS09VWNDEhuZPyoDWih38-A8HkSZjkVkyHV7QuM4hM6ke5nva87h4QQDX1Ht4TojalsCSPLi3c=4421D447
