successfully reaching jira and openai, result is being displayed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
 # OpenAI API Key
-openai.api.key=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
+openai.api.key=
 
 # OpenAI Model
 openai.model=gpt-3.5-turbo
@@ -43,4 +43,4 @@ openai.start.changerequest.url=http://localhost:8080/changeRequest
 
 jira.username=lindahl.isaac@gmail.com
 
-jira.authkey=ATATT3xFfGF0il6Qn4ue5DzI0o77-VFjRpSOtSALN_zukIJT5VKBflahEyZ5dOqBv7PvG9hBpQj1VZc--wftTuEzAk4zPwwY86uigkOEEu4zPNS09VWNDEhuZPyoDWih38-A8HkSZjkVkyHV7QuM4hM6ke5nva87h4QQDX1Ht4TojalsCSPLi3c=4421D447
+jira.authkey=
