--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
 # OpenAI API Key
-openai.api.key=
+openai.api.key=${openai_api_key}
 
 # OpenAI Model
 openai.model=gpt-3.5-turbo
@@ -41,6 +41,6 @@ openai.log-level=info
 #application url
 openai.start.changerequest.url=http://localhost:8080/changeRequest
 
-jira.username=lindahl.isaac@gmail.com
+jira.username=${jira_username}
 
-jira.authkey=
+jira.authkey=${jira_authkey}
