--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8080
 openai.api.key=${openai_api_key}
 
 # OpenAI Model
-openai.model=gpt-3.5-turbo
+openai.model=gpt-4
 
 #----------------------
 # Thread Properties
